Added Sass styling to cart

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,3 +3,5 @@
 
 @import 'components/productList';
 @import 'components/productCard';
+@import 'components/cartCard';
+@import 'components/cartPage';
