--- a/src/styles/components/_cartPage.scss
+++ b/src/styles/components/_cartPage.scss
@@ -3,12 +3,12 @@
   margin: 5vw
 }
 
-.cartCardsStyle {
+.cartItems {
   width: 40vw;
   float: left
 }
 
-.checkoutStyle {
+.cartTotals {
   width: 29vw;
   float: right;
   border: 1px solid #CCC
