--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -3,8 +3,10 @@
 /*EXAMPLE vvvvv*/
 
 body {
+  margin: 0;
+  padding: 0;
   background-color: $body-bg-color;
   color: $body-font-color;
-  width: 100vw;
-  height: 100vh;
+  max-width: 100vw;
+  min-height: 100vh;
 }
