--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,35 @@
+#header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 100%;
+  height: 10vw;
+  margin-right: 2vw;
+}
+
 .branding {
-  background-size: contain;
+  background: url('./src/styles/images/BLAMM_Logo.png') center/contain;
   width: 10vw;
   height: 10vw;
+}
+
+#mainMenu {
+}
+
+.menuLink {
+  display: flex;
+  justify-content: center;
+}
+
+.topNav a {
+  text-decoration: none;
+  margin:50px;
+  color: black;
+  font-size: 2em;
+}
+
+.userNav a {
+  padding: 3vw;
+  text-decoration: none;
+  color: black;
 }
