updating footer CSS

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -21,9 +21,12 @@
   justify-content: center;
 }
 
-.topNav a {
+.nav {
+  margin: 2vh;
+}
+
+.nav a {
   text-decoration: none;
-  margin:50px;
   color: black;
   font-size: 2em;
 }
