Styling product list page

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,7 +1,9 @@
 /* GLOBAL VARIABLES GO HERE */
 
-$body-bg-color: white;
-$body-font-color: black;
+$body-bg-color: #F2F2F2;
+$body-font-color: #372C44;
+$comic-font: "Bangers";
+
 
 
 /*This is where you can define your personal variables!*/
