--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,14 +3,20 @@
   justify-content: space-between;
   align-items: center;
   max-width: 100%;
-  height: 10vw;
-  margin-right: 2vw;
+  height: 6vw;
+  // margin-right: 2vw;
+  background-color: $secondary-bg-color;
+  border-bottom: 10px solid $accent-teal;
+  overflow: visible;
 }
 
 .branding {
   background: url('./src/styles/images/BLAMM_Logo.png') center/contain;
   width: 10vw;
   height: 10vw;
+  position: relative;
+  top: 2.5rem;
+  left: 0.5rem;
 }
 
 #mainMenu {
