--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,7 +3,7 @@
 
 @import 'components/productList';
 @import 'components/productCard';
-@import 'components/cartCard';
+@import 'components/receipt';
 @import 'components/cartPage';
 @import 'components/header';
 @import 'components/splash';
