--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -2,10 +2,14 @@
 
 /*EXAMPLE vvvvv*/
 
+* {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: $body-bg-color;
+  background: $secondary-bg-color;
   color: $body-font-color;
-  margin: 0;
+  margin: 10vw 2vw 0 2vw;
   padding: 0;
   max-width: 100vw;
   min-height: 100vh;
