--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -5,6 +5,12 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  // background dots
+  background-color: $secondary-bg-color;
+  background-image: radial-gradient($vintage 10%, transparent 10%),
+  radial-gradient($vintage 10%, transparent 10%);
+  background-size: 20px 20px;
+  background-position: 0 0, 10px 10px;
 }
 
 .support {
