More styling, fixed header

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -2,7 +2,7 @@
 
 /* COLORS */
 $body-bg-color: #FFF;
-$secondary-bg-color: #F2F2F2;
+$secondary-bg-color: #FAFAFA;
 $vintage: #D4D2B6;
 
 $body-font-color: #452B34;
