--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 6vw;
+  height: 100px;
   // border-bottom: 5px solid $accent-teal;
   overflow: visible;
   position: fixed;
@@ -21,8 +21,8 @@
 
 .branding {
   background: url('./src/styles/images/BLAMM_Logo.png') center/contain;
-  width: 10vw;
-  height: 10vw;
+  width: 13rem;
+  height: 13rem;
   position: relative;
   top: 2.5rem;
   left: 0.5rem;
@@ -55,8 +55,33 @@
 
 }
 
-.userNav a {
-  padding: 3vw;
+.userNav {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 2rem;
+  padding-right: 4rem;
   text-decoration: none;
-  color: black;
+
+  font-size: 2rem;
+  text-decoration: none;
+  color: $vintage;
+  text-shadow:
+  3px 3px 0 $body-font-color,
+-1px -1px 0 $body-font-color,
+ 1px -1px 0 $body-font-color,
+ -1px 1px 0 $body-font-color,
+  1px 1px 0 $body-font-color,;
+}
+
+.userNav a {
+
+}
+
+.cartNumber {
+  color: $accent-orange;
+  font-size: 1.5rem;
+  z-index: 2;
+  position: absolute;
+  right: 5.25rem;
+  top: 2rem;
 }
