fixes cross-browser issues and reqForm, makes minor adjustments to styling

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -9,17 +9,17 @@ $body-font-color: #452B34;
 $secondary-font-color: #4E3D59;
 $invert-font-color: #FEFEE7;
 
-$main-link-color: #923D31;
+$main-link-color: #4A4A4A;
 
 $accent-orange: #FFB300;
 $accent-teal: #88D1CA;
-$accent-red: #ED4E1D;
-
+$accent-red: #E71300;
+$accent-blue: #008DE9;
 
 
 /* TYPE */
 $comic-font: "Bangers";
-$secondary-font: "Oswald";
+$secondary-font: "Roboto";
 
 
 /* TYPE SIZES */
@@ -39,8 +39,8 @@ $small-info-label: 1rem;
 
 /*PRODUCT LIST VARIABLES */
 $prodList-bg-color: lightgrey;
-$prodList-img-height: 150px;
-$prodList-img-width: 150px;
+$prodList-img-height: 200px;
+$prodList-img-width: 200px;
 
 /*PRODUCT IMAGE VARIABLES */
 $product-image: 300px;
