--- a/src/styles/components/_productCard.scss
+++ b/src/styles/components/_productCard.scss
@@ -126,9 +126,9 @@ l- layout (containers)
   font-size: $large-text;
   margin: 1rem 0.25rem 1rem 0;
   padding: 0.25rem 2rem;
-  border: 1px solid darken($accent-orange, 10%);
-  border-bottom: 3px solid darken($accent-orange,10%);
-  background-color: $accent-orange;
+  border: 1px solid darken($secondary-bg-color, 10%);
+  border-bottom: 3px solid darken($secondary-bg-color,10%);
+  background-color: $secondary-bg-color;
   text-decoration: none;
   border-radius: 6px;
 }
@@ -136,6 +136,22 @@ l- layout (containers)
 .b-forms__submitLink {
   text-decoration: none;
   color: $body-font-color;
+}
+
+.b-itemAdded__nav {
+  font-family: $secondary-font;
+  font-size: $text;
+  margin: 1rem 0.25rem 1rem 0;
+  padding: 0.25rem 2rem;
+  border: 1px solid darken($accent-teal, 10%);
+  border-bottom: 3px solid darken($accent-teal,10%);
+  background-color: $accent-teal;
+  text-decoration: none;
+  border-radius: 6px;
+}
+
+.b-itemAdded__nav a {
+  color: $invert-font-color;
 }
 
 .b-formGroup {
@@ -188,9 +204,10 @@ input[type=radio]:checked + span {
   font-family: $secondary-font;
   font-size: 1.5rem;
   color: $main-link-color;
-  border: 1px solid darken($accent-orange, 10%);
-  border-bottom: 3px solid darken($accent-orange,10%);
-  background-color: $accent-orange;
+  width: 2rem;
+  border: 1px solid darken($vintage, 10%);
+  border-bottom: 3px solid darken($vintage,10%);
+  background-color: $vintage;
   border-radius: 6px;
 }
 
