--- a/src/styles/components/_productList.scss
+++ b/src/styles/components/_productList.scss
@@ -66,7 +66,7 @@ l- layout (containers)
 
 .b-productListing__title a{
   text-decoration: none;
-  color: $main-link-color;
+  color: $body-font-color;
   letter-spacing: 0.1rem;
   // text-shadow:
     // 3px 3px 0 $body-font-color,
@@ -74,7 +74,11 @@ l- layout (containers)
   //  1px -1px 0 $body-font-color,
   //  -1px 1px 0 $body-font-color,
   //   1px 1px 0 $body-font-color,;
+}
 
+.b-productListing__title a:hover {
+  text-decoration: none;
+  color: $accent-red;
 }
 
 .l-productListing__info {
