--- a/src/styles/components/_splash.scss
+++ b/src/styles/components/_splash.scss
@@ -1,7 +1,7 @@
 .splashBody {
-  margin: 0 auto;
-  height: 100vmin;
-  max-width: 100vmin;
+  margin: 0 auto 2vw auto;
+  height: 80vmin;
+  max-width: 80vmin;
   background-position: center;
   background-size: cover;
 }
