--- a/src/styles/components/_productList.scss
+++ b/src/styles/components/_productList.scss
@@ -6,7 +6,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 80vw;
-  margin: 4rem auto 0 auto;
+  margin: 120px auto 0 auto;
   text-decoration: none;
 }
 
