fixing user product pages, and changed settings on button

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -102,4 +102,6 @@
   background-color: $accent-blue;
   border-radius: 6px;
   display: inline-block;
+  font-family: $secondary-font;
+  color: $invert-font-color;
 }
