--- a/src/styles/components/_productCard.scss
+++ b/src/styles/components/_productCard.scss
@@ -21,7 +21,7 @@ l- layout (containers)
   display: flex;
   min-height: 500px;
   max-width: 70vw;
-  margin: 4rem auto 1rem auto;
+  margin: 120px auto 1rem auto;
 }
 
 .l-image {
