--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -103,5 +103,7 @@
   border-radius: 6px;
   display: inline-block;
   font-family: $secondary-font;
+  font-size: $text;
   color: $invert-font-color;
+  text-decoration: none;
 }
